whoami.deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: traefiklabs
    name: whoami
    app.kubernetes.io/name: whoami
    app.kubernetes.io/component: backend
    app.kubernetes.io/version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefiklabs
      task: whoami
  template:
    metadata:
      labels:
        app: traefiklabs
        task: whoami
        app.kubernetes.io/name: whoami
        app.kubernetes.io/component: backend
        app.kubernetes.io/version: latest
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
      containers:
        - name: whoami
          image: traefik/whoami:latest
          imagePullPolicy: IfNotPresent
          resources:
           limits:
             memory: 256Mi
             cpu: 200m
           requests:
             memory: 128Mi
             cpu: 100m
          ports:
            - containerPort: 80
            - containerPort: 443
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
