whoami.service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: traefiklabs
    task: whoami
